# ftdi-embedded-hal-archive

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: at24c04-test1.rs  lm75-test1.rs  loopback-test.rs  mcp3008-test1.rs  nrf24-test.rs  nrf24-test1.rs  nrf24-test2.rs  nrf24-test3.rs  ws2812-test1.rs
src/: devices.rs  error.rs  ft232h.rs  ftdimpsse.rs  gpio.rs  i2c.rs  lib.rs  main.rs  mpsse.rs  spi.rs  x232h.rs
