[package]
name = "ftdi-embedded-hal"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

[dependencies]
nb = "0.1.1"
rand = "0.6"
itertools = "0.7"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[dependencies.ftdi]
git = "https://github.com/geomatsi/ftdi-rs"
branch = "wip-add-more-wrappers"

[dev-dependencies]
embedded-nrf24l01 = { git = "https://github.com/astro/embedded-nrf24l01", rev = "ab3ac91fb93746be9b79733960404c6f82528137" }
eeprom24x = "0.3.0"
lm75 = "0.1.1"
