[package]
name = "ftdi-embedded-hal"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

[dependencies]
nb = "1.0.0"
rand = "0.8.3"
itertools = "0.10.0"
embedded-hal = "0.2.5"

[dependencies.ftdi]
git = "https://github.com/geomatsi/ftdi-rs"
branch = "wip-add-more-wrappers"

[dev-dependencies]
embedded-nrf24l01 = "0.2.0"
eeprom24x = "0.3.0"
lm75 = "0.1.2"
