[package]
name = "ftdi-embedded-hal"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

[dependencies]
nb = "1.0.0"
rand = "0.8"
itertools = "0.10"
embedded-hal = "0.2"
ftdi = "0.1"
ftdi-mpsse = "0.1"

[dev-dependencies]
embedded-nrf24l01 = "0.2.0"
eeprom24x = "0.3.0"
lm75 = "0.1.2"

[dev-dependencies.adc-mcp3008]
git = "https://github.com/geomatsi/adc-mcp3008.git"
branch = "misc-updates"

# features only for tests: select ftdi-rs or libftd2xx-rs
[features]
ftd2-lib = []
ftdi-lib = []
default = []
